# Productiv

./: .gitignore  Cargo.toml
docs/: feature-status.md
src/: main.rs  models.rs
src/app/: actions.rs  cards.rs  layout.rs  mod.rs  overlays.rs  planner.rs  sidebar.rs  timeline.rs  windowing.rs
src/services/: mod.rs  runtime.rs  windows_tracker.rs
src/storage/: activity.rs  mod.rs  schedule.rs  schema.rs  settings.rs  shared.rs  tasks.rs
