[package]
name = "productiv"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
dirs = "6.0"
eframe = "0.31"
egui = "0.31"
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
tray = "0.1.1"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
